# clipport

./: Cargo.toml  README.md  flake.nix
src/: clipboard.rs  main.rs
