[package]
name = "clipport"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
arboard = "3.4.1"
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
postcard = { version = "1.0.10", features = ["use-std"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
